Output enable/disable broken after ab7eabac
After commit ab7eabac locking my laptop and having the screen turn off will have the screen never re-enable after the lock has finished (i.e. the screen will remain blank). Switching to another tty and killing sway is the only way to get the system to work again.
An interesting message in the tty is:
[wlr] [backend/drm/drm.c:1162] connector eDP-1: Failed to disable CRTC 50
Reverting the commit (which applies cleanly on master right now) fixes the problem.
Edited by Alexander Orzechowski